terraform/modules/vpc/vpc.tf
# Create a VPC network
resource "google_compute_network" "vpc" {
  name                    = var.vpc_name
  auto_create_subnetworks = false
}

# Create a Subnet
resource "google_compute_subnetwork" "subnet" {
  name          = var.subnet_name
  ip_cidr_range = "10.2.0.0/16"
  network       = google_compute_network.vpc.id
  region        = var.region
}

# Create internall firewall
resource "google_compute_firewall" "allow_internal" {
  name    = "allow-internal"
  network = google_compute_network.vpc.name

  allow {
    protocol = "tcp"
    ports    = ["5432"]
  }

  source_ranges = [google_compute_subnetwork.subnet.ip_cidr_range]
}

# Create internall https
resource "google_compute_firewall" "allow_https" {
  name    = "allow-https"
  network = google_compute_network.vpc.name

  allow {
    protocol = "tcp"
    ports    = ["8080","22"]
  }

  source_ranges = ["0.0.0.0/0"]
  target_tags   = ["https-server"]
}
